fix(navbar): Don’t wrap text in a regular top app bar

--- a/src/app/shared/sidenav/sidenav.component.scss
+++ b/src/app/shared/sidenav/sidenav.component.scss
@@ -15,9 +15,8 @@
 
   .navbar-title {
     font-family: cyberdyne;
-    line-height: 20px;
+    font-size: 16px;
     padding-left: 16px;
-    white-space: pre-line;
     [dir=rtl] & {
       padding-left: 0;
       padding-right: 16px;
